samples/_failures_safe/1761312221_744be9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a636101.c: In function ‘main’:
./samples/SAFE/__tmp_9a636101.c:167:11: error: expected ‘;’ at end of input
  167 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_9a636101.c:167:5: error: expected declaration or statement at end of input
  167 |     printf
      |     ^~~~~~
